2020. 5. 3. Modified zTri3DPointDist. [zeo_elem]
2020. 5. 2. Abolished zeo_col_abbtree. [zeo_col, zeo_col_aabbtree, makefile]
2020. 5. 2. Renamed pmin and pmax members of zAABox3D to min and max, respectively. [zeo_bv_aabb, zeo_col_box, zeo_col_aabbtree]
2020. 4.30. Debugged zBBall. [zeo_bv_bball]
2020. 4. 3. Modified zeo_phconv to accept uppercase suffices. [app]
2020. 4. 3. Modified _zShape3DImportFromZTK to accept uppercase suffices. [zeo_shape]
2020. 4. 3. Modified specification of _zShape3DImportFromZTK to accept a scaling factor. [zeo_shape]
2020. 4. 3. Added scaling operation in zeo_phconv. [app]
2020. 4. 3. Added zPH3DScale. [zeo_ph]
2020. 4. 3. Added scaling operation in zeo_phconv (dummy). [app]
2020. 4. 3. Debugged _zShape3DImportFromZTK. [zeo_shape]
2020. 4. 3. Renamed a member mirrored in _zShape3DRefPrp to imported. [zeo_shape]
2020. 4. 3. Defined import key for zShape3D in ZTK and added _zShape3DImportFromZTK. [zeo_errmsg, zeo_shape]
2020. 4. 3. Modified zeo_phconv reflecting newly added zShape3DFReadSTL and zShape3DFReadPLY. [app]
2020. 4. 3. Added zShape3DFReadSTL and zShape3DFReadPLY. [zeo_errmsg, zeo_shape]
2020. 4. 2. Debugged _zShape3DNameFromZTK, _zShape3DOpticFromZTK and _zShape3DMirrorFromZTK. [zeo_shape]
2020. 4. 2. Renamed zeo_stlconv to zeo_phconv and modified it to accept PLY file. [app]
2020. 4. 2. Added zPH3DFReadPLY, zPH3DFWritePLY_ASCII and zPH3DFWritePLY_Bin. [zeo_errmsg, zeo_ph, zeo_ph_ply]
2020. 3.30. Moved a macro ZEO_ERR_STL_UNREADABLE to zeo_errmsg.h. [zeo_errmsg, zeo_ph]
2020. 3.27. Modified some .ztk files to be ready for respecification of ZTK format. [example]
2019.11.21. Rewrote README as a markdown file. [README]
2019.10. 5. Reflected new specification of zMax, zMin and zLimit. [zeo_misc, zeo_color, zeo_optic, zeo_shape_box, zeo_bv_aabb, zeo_col_box, zeo_map_terra]
2019.10. 1. Enabled make uninstall. [makefile]